# quel-qal

./: .gitattributes  .gitignore  CITATION.cff  COMPLIANCE.md  README.md  pyproject.toml  requirements.txt
doc/: lung_README.md  rcs_README.md  rds_README.md  rrt_README.md  rud_README.md
qal/: __init__.pyi
qal/data/: __init__.pyi  _fetchers.py  _registry.py
qal/data/concentration_targets/: cn_sample_1.tiff  cn_sample_2.tiff  cn_sample_3.tiff  cn_sample_4.tiff
qal/data/depth_resolution_targets/: dr_sample1.tiff  dr_sample2.tiff
qal/data/depth_targets/: depth_sample_1.tiff  depth_sample_2.tiff
qal/data/lung-model-10mm-cylinder/: Lung_10-mm-inclusion-only_r0-1.stl  lung_cylinder_10mm_step1.json  lung_cylinder_10mm_step2.json
qal/data/lung-model-all-inclusions/: 10-mm_inclusion_r0-1.stl  15-mm_inclusion_r0-1.stl  20-mm_inclusion_r0-1.stl  4-mm_inclusion_r0-1.stl  8-mm_inclusion_r0-1.stl  Lung_r0-1.stl
qal/data/lung_reference/: Lung_reference_image.tiff
qal/data/lung_reference_source/: Inclusions image.tiff  Phantom image.tiff
qal/data/lung_test_image/: lung_test_image.tiff
qal/data/resolution_targets/: res_sample_1.tiff  resolution_target_cropped.tiff
qal/examples/: create_lung_reference.py  depth_resolution_example.py  distortion_full_fov_example.py  distortion_sub_fov_example.py  lung_phantom_example.py  rrt_manual_example.py  rrt_semi-automatic_example.py  uniformity_good_system_example.py  uniformity_poor_system_example.py  well_analyzer_example.py
qal/rta/data_visualizer/: rrt_data_plotter.py  uniformity_visualizer.py  well_data_plotter.py
qal/rta/image_analyzer/: distortion_analyzer.py
qal/rta/roi_extraction/: rrt_roi.py  rud_detector.py  (+1 more)
qal/vpa/: quel_lung_phantom.py
(+12 files in other folders)
